# miployees

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE.md  Makefile  README.md  alembic.ini  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.claude/: README.md
.claude/agents/: coder.md  commiter.md  documenter.md  oracle.md  reviewer.md  selfreview.md
.claude/codebase/: README.md
.claude/commands/: ai-slop.md
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  capabilities.py  config.py  main.py
app/abuse/: __init__.py  throttle.py
app/adapters/: __init__.py
app/admin/: backup.py
app/api/: __init__.py  deps.py  errors.py  factory.py  pagination.py  proxy.py
app/audit/: __init__.py
app/auth/: __init__.py  _throttle.py  csrf.py  magic_link.py  passkey.py  recovery.py  session.py  session_cookie.py  signup.py  signup_abuse.py  tokens.py  webauthn.py
app/authz/: __init__.py  enforce.py  membership.py  owners.py
app/domain/: __init__.py  errors.py  plans.py  privacy.py
app/events/: __init__.py  bus.py  registry.py  types.py
app/fixtures/: __init__.py  llm.py
app/i18n/: __init__.py
app/ports/: __init__.py  tasks_create_occurrence.py
app/services/: __init__.py
app/tenancy/: __init__.py  deployment.py  middleware.py
app/util/: __init__.py  clock.py  currency.py  hashids.py  locales.py  logging.py  money.py  redact.py  ulid.py
app/web/: .gitignore  .npmrc  __init__.py  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/worker/: __init__.py  scheduler.py
cli/: README.md
cli/crewday/: __init__.py  __main__.py  _client.py  _config.py  _globals.py  _main.py  _output.py
cli/tests/: test_client.py  test_main.py  test_overrides_admin.py  test_overrides_auth.py  test_overrides_expenses.py  test_overrides_tasks.py
deploy/compose/: Caddyfile  docker-compose.yml
deploy/single/: Dockerfile  entrypoint.sh
docs/specs/: 00-overview.md  01-architecture.md  02-domain-model.md  03-auth-and-tokens.md  04-properties-and-stays.md  05-employees-and-roles.md  06-tasks-and-scheduling.md  07-instructions-kb.md  08-inventory.md  09-time-payroll-expenses.md  10-messaging-notifications.md  11-llm-and-agents.md  12-rest-api.md  13-cli.md  14-web-frontend.md  15-security-privacy.md  16-deployment-operations.md  17-testing-quality.md  18-i18n.md  19-roadmap.md  20-glossary.md  21-assets.md  22-clients-and-vendors.md  23-chat-gateway.md  24-demo-mode.md  25-marketplace.md
docs/specs-site/: 00-overview.md  01-landing-and-demo-embed.md  02-suggestion-box.md  03-app-integration.md  04-deployment-and-security.md  05-roadmap.md  README.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260419_2124_6cb7f0a6f8a3_deployment_setting.py  20260419_2240_1dc6908659d3_identity.py  20260419_2326_200bedec0eed_tasks.py  20260420_0340_dbf10d5d2f11_webauthn_challenge.py  20260420_0745_41a434d066d8_time.py  20260420_0855_53e464485919_instructions.py  20260420_0909_0aa2a5606810_inventory.py  20260420_1015_7f2c5a8e9bd3_invite.py  20260420_1200_8f3c2a4d1e90_session_harden.py  20260420_1300_a9b3c7d5e2f1_task_template_cd_0tg.py  20260420_1400_b2d4c8f3a5e6_schedule_cd_k4l.py  20260420_1500_c4f6a9b8d2e1_occurrence_cd_22e.py  20260420_1600_d5e7b3a1c9f4_occurrence_oneoff_cd_0rf.py  20260420_1700_e6f8c0b4a2d7_idempotency_key_cd_z6fk.py  20260424_0900_f7c9e1a4b5d8_token_kinds_cd_i1qe.py  20260424_1000_a1b2c3d4e5f6_workspace_settings_json_cd_jdhm.py  20260424_1100_b2c3d4e5f6a7_property_cd_8u5.py  20260424_1300_d4e5f6a7b8c9_email_opt_out_delivery_cd_aqwt.py  20260424_1500_f6a7b8c9d0e1_llm_assignment_extras_cd_u84y.py  20260424_1700_b8d0e1f2a3b4_llm_usage_agent_trail_cd_wjpl.py  20260424_1800_c9e1f2a3b4d5_work_role_cd_5kv4.py  20260424_2200_a3c5d7e9b1f2_task_comment_agent_inbox_cd_cfe4.py  20260424_2300_b4d6e8fac3d4_expense_reimbursement_cd_9guk.py  20260425_1200_b9c1e3f5a7b9_audit_log_scope_kind_cd_kgcc.py  20260425_1300_c0d2e4f6a8b1_llm_registry_cd_4btd.py  20260426_0000_a2b4c6d8e0f1_task_overdue_since.py  20260426_1200_c4d6e8fab2c5_workspace_basics_cd_n6p.py  20260428_1000_d2e4f6a8b0c2_privacy_cd_vrfg.py  20260428_1300_e3f5a7b9c1d3_payslip_status_cd_73i.py  20260428_1600_a5c7e9b1d3f5_inventory_items_cd_jkwr.py  20260428_1700_b6d8f0a2c4e6_task_evidence_cd_wajj.py  20260429_1500_a1c3e5f7b9d1_chat_gateway_inbound_cd_r09r.py  20260429_1700_c3e5f7a9b1d2_nl_task_preview_cd_6lwh.py
mocks/: .dockerignore  Dockerfile  Dockerfile.app-api  Dockerfile.mocks-api  README.md  docker-compose.yml  pyproject.toml
mocks/app/: main.py  mock_data.py
mocks/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: _schemathesis_seed.py  dev-login.sh  dev_login.py  schemathesis_run.sh  update-loc-chart.sh
tests/: conftest.py
tests/_fakes/: envelope.py
tests/boundary/: test_import_gate.py
tests/contract/: __init__.py  hooks.py  test_schemathesis_runner.py
tests/e2e/: conftest.py
tests/factories/: identity.py
tests/integration/: conftest.py  mail.py  test_agent_runtime.py  test_audit_writer.py  test_backend_selector.py  test_capabilities.py  test_db_authz.py  test_db_identity.py  test_db_instructions.py  test_db_inventory.py  test_db_llm.py  test_db_messaging.py  test_db_payroll.py  test_db_places.py  test_db_tasks.py  test_db_time.py  test_db_workspace.py  test_fixtures_llm.py  test_mail_smtp.py  test_main.py  test_migration_cd_i1qe.py  test_migration_cd_jkwr.py  test_receipt_ocr_job.py  test_schema_parity.py  test_shifts_api.py  test_tasks_generator_run.py  test_tasks_overdue_tick.py  test_tenancy_middleware_auth.py  test_worker_llm_budget.py  test_worker_scheduler.py
tests/property/: test_redact_fuzz.py
tests/tenant/: __init__.py  _optouts.py  conftest.py  test_event_subscriptions.py  test_http_surface.py  test_repository_parity.py  test_worker_jobs.py
tests/unit/: test_adapter_ports.py  test_audit_writer.py  test_capabilities.py  test_config.py  test_db_base.py  test_db_expenses.py  (+28 more)
(+641 files in other folders)
