[project]
name = "crewday"
version = "0.0.1"
description = "crew.day — ops co-pilot for short-term-rental and small-hospitality teams."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2.6",
    "pydantic-settings",
    "python-multipart",
    "webauthn",
    "python-ulid",
    "apscheduler",
    "httpx",
    "icalendar",
    "python-dateutil",
    "itsdangerous",
    "weasyprint",
    "click",
    # argon2id hashing for API-token secrets (§03 "API tokens",
    # §15 "Token hashing"). The secret never leaves the server as
    # plaintext after mint; only its argon2id digest is stored, so a
    # DB leak cannot be replayed.
    "argon2-cffi>=23",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "schemathesis",
    "playwright",
    "ruff",
    "mypy",
    "import-linter",
    "locust",
    "factory-boy",
    "hypothesis",
    # Postgres driver for the integration-test shard in CI. The sync
    # engine builds `postgresql+psycopg://` URLs (see
    # `app/adapters/db/session.py::normalise_sync_url`) so psycopg 3 must
    # be installed wherever integration tests target PG. SQLite shards
    # don't need it but installing in dev keeps parity with CI.
    "psycopg[binary]",
    # Spin up a real Postgres 15 per integration-test session (cd-rhaj).
    # The sqlite shard never touches this package, but it's cheap to
    # install in dev and keeps the PG shard hermetic: no need for a
    # services: postgres block in CI — testcontainers handles container
    # lifecycle from inside the test process.
    "testcontainers[postgres]",
    # Type stubs for :mod:`dateutil` used by
    # :mod:`app.domain.tasks.schedules` (RRULE parsing). Without the
    # stubs, ``mypy --strict`` flags ``from dateutil.rrule import
    # rrulestr`` as untyped; installing them keeps the strict gate
    # green without a blanket ``ignore_missing_imports``.
    "types-python-dateutil",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["mocks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
exclude = ["mocks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Use importlib to prevent per-context dir name collisions
# (tests/unit/<ctx>/test_smoke.py appears under 13 contexts). The
# trade-off is that pytest no longer injects the project root into
# sys.path implicitly, so we set ``pythonpath`` to make ``app`` and
# ``tests._fakes``/``tests.factories`` importable.
addopts = "--import-mode=importlib"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "pg_only: test requires Postgres (skipped when CREWDAY_TEST_DB=sqlite)",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/__init__.py"]

# CSP inline linter (cd-wv2v).
#
# ``scripts/check_csp_inlines.py`` walks ``app/web/dist/**/*.html`` and
# refuses any ``<script>`` or ``<style>`` tag that is inline (no ``src=``
# / ``href=``) and not nonced. The strict CSP served by
# :class:`app.api.middleware.SecurityHeadersMiddleware` only accepts
# nonced inlines; an un-nonced one would silently be refused by the
# browser, breaking the SPA with no server-side error.
#
# Run locally:
#
#   uv run python scripts/check_csp_inlines.py
#   uv run python scripts/check_csp_inlines.py app/web/dist
#
# Wiring this into CI is deployment-infra scope (separate task); the
# script is ready to drop into any pipeline that already invokes the
# scripts/ directory. See docs/specs/15-security-privacy.md
# §"HTTP security headers".
[tool.check_csp]
default_path = "app/web/dist"

[tool.coverage.report]
show_missing = true
skip_covered = true

# Import boundary contracts (cd-ev0).
#
# Enforces the rules in docs/specs/01-architecture.md §"Boundary rules"
# and docs/specs/17-testing-quality.md §"Import boundaries":
#   1. `app.domain` must not import `app.adapters` (ports.py is the
#      one exception — it's the Protocol seam).
#   2. `app.domain` must not import handlers (`app.api`, `app.web`,
#      `app.cli`, `cli`) or `app.worker` (the scheduler/worker layer
#      drives the domain, not the other way around — §17 "Layer
#      contract").
#   3. `app.adapters` must not import handlers or `app.worker` either.
#
# A fourth contract in the spec — each `domain.<X>` may only reach
# siblings through the sibling's `__init__.py` public surface — is
# deferred until domain contexts grow submodules (today every
# `app/domain/<ctx>/__init__.py` is a docstring-only stub). Tracked
# as a follow-up Beads task.
#
# `include_external_packages = true` lets us name modules that don't
# yet exist as packages in the tree (e.g. `app.cli`, `cli`) without
# import-linter failing its build-graph step. `unmatched_ignore_imports_
# alerting = "none"` lets us describe the long-term allowlist now
# (e.g. `app.domain.** -> app.adapters.*.ports`) without tripping
# when no such imports exist yet.
[tool.importlinter]
root_packages = ["app"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain forbids adapters (except ports)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.adapters"]
ignore_imports = [
    "app.domain.** -> app.adapters.*.ports",
    "app.domain.** -> app.adapters.*.ports.*",
    # v1 stopgap (cd-zkr): ``app.domain.identity.permission_groups``
    # imports :class:`PermissionGroup` / :class:`PermissionGroupMember`
    # directly from ``app.adapters.db.authz.models`` instead of going
    # through a Protocol seam. Tracked for proper-seam refactor by
    # cd-duv6 — once ``PermissionGroupRepository`` lands under
    # ``app.adapters.db.authz.repositories`` this exception drops.
    "app.domain.identity.permission_groups -> app.adapters.db.authz.models",
    # v1 stopgap (cd-79r): ``app.domain.identity.role_grants`` reads
    # :class:`RoleGrant` / :class:`PermissionGroup` /
    # :class:`PermissionGroupMember` from ``app.adapters.db.authz.models``
    # and ``PropertyWorkspace`` from ``app.adapters.db.places.models``
    # directly. Same Protocol-seam refactor as permission_groups;
    # tracked by cd-duv6 (extended scope). Once the repositories
    # land these exceptions drop together.
    "app.domain.identity.role_grants -> app.adapters.db.authz.models",
    "app.domain.identity.role_grants -> app.adapters.db.places.models",
    # v1 stopgap (cd-mb5n): ``app.domain.identity._owner_guard`` is the
    # shared cross-dialect locking primitive for the last-owner
    # invariant; both ``remove_member`` and ``revoke`` delegate their
    # owner-count read to it. It imports :class:`PermissionGroup` /
    # :class:`PermissionGroupMember` from ``app.adapters.db.authz.models``
    # for the same reason as its siblings — the Protocol-seam refactor
    # hasn't landed yet. Drops with cd-duv6 alongside the other
    # ``app.domain.identity`` exceptions.
    "app.domain.identity._owner_guard -> app.adapters.db.authz.models",
    # v1 stopgap (cd-jpa): ``app.domain.identity.membership`` reads
    # identity + authz + workspace ORM models directly. Same
    # Protocol-seam refactor as the siblings above; tracked by
    # cd-duv6 (extended scope). Drops once the repositories land.
    "app.domain.identity.membership -> app.adapters.db.authz.models",
    "app.domain.identity.membership -> app.adapters.db.identity.models",
    "app.domain.identity.membership -> app.adapters.db.workspace.models",
    # The invite flow delegates token mint + consume to
    # :mod:`app.auth.magic_link`, which itself reads identity ORM
    # models directly (cd-4zz stopgap at the auth-layer level).
    # Shielding the transitive edge keeps the "domain can't touch
    # adapters" contract honest without forcing every auth domain
    # call to route through a port.
    "app.domain.identity.membership -> app.auth.magic_link",
    # v1 stopgap (cd-ckr): the owners-membership check lives under
    # ``app.authz.owners`` so the tenancy middleware (cd-7y4) and
    # the identity domain share one SELECT shape. ``app.authz``
    # itself is not ``app.domain`` so the contract would allow its
    # direct ``app.adapters`` import, but the transitive walk from
    # ``app.domain.identity.role_grants → app.authz.owners →
    # app.adapters.db.authz.models`` trips the checker. Ignoring the
    # intermediate edge keeps the DRY'd seam honest without
    # loosening the top-level "domain can't touch adapters" rule.
    # Drops with cd-duv6 when the proper repository protocol lands.
    "app.domain.identity.role_grants -> app.authz.owners",
    # ``app.audit`` is the canonical write seam for the audit log and
    # is intended to be called from every domain service (see
    # ``docs/specs/01-architecture.md`` §"Shared kernel" —
    # the audit writer sits above both domain and adapters). Its
    # implementation imports the ORM model class from
    # ``app.adapters.db.audit.models`` purely so ``write_audit`` can
    # construct a row; callers never see that dependency. Shielding
    # the transitive import keeps the contract honest without
    # forcing every domain caller to route through a third-party port.
    "app.audit -> app.adapters.db.audit.models",
    # v1 stopgap (cd-0tg): ``app.domain.tasks.templates`` reads
    # :class:`TaskTemplate` / :class:`Schedule` from
    # ``app.adapters.db.tasks.models`` directly. Same Protocol-seam
    # pattern as the identity stopgaps above; tracked by cd-duv6
    # (extended scope) — drops once the tasks repositories land.
    "app.domain.tasks.templates -> app.adapters.db.tasks.models",
    # v1 stopgap (cd-k4l): ``app.domain.tasks.schedules`` reads
    # :class:`Schedule` / :class:`Occurrence` / :class:`TaskTemplate`
    # from ``app.adapters.db.tasks.models`` directly. Same
    # Protocol-seam pattern as ``app.domain.tasks.templates``;
    # tracked by cd-duv6 (extended scope) — drops once the tasks
    # repositories land.
    "app.domain.tasks.schedules -> app.adapters.db.tasks.models",
    # v1 stopgap (cd-0rf): ``app.domain.tasks.oneoff`` reads
    # :class:`TaskTemplate` / :class:`Occurrence` from
    # ``app.adapters.db.tasks.models`` and :class:`Property` from
    # ``app.adapters.db.places.models`` (to resolve the property
    # timezone for the local → UTC projection). It also invokes
    # :func:`app.authz.enforce.require` for the ``tasks.create``
    # defence-in-depth check. Same Protocol-seam pattern as the
    # other tasks services above; tracked by cd-duv6 (extended
    # scope) — drops once the repositories land.
    "app.domain.tasks.oneoff -> app.adapters.db.tasks.models",
    "app.domain.tasks.oneoff -> app.adapters.db.places.models",
    "app.domain.tasks.oneoff -> app.authz",
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` reads
    # :class:`Shift` + ``_SHIFT_SOURCE_VALUES`` from
    # ``app.adapters.db.time.models`` directly. Same Protocol-seam
    # pattern as ``app.domain.tasks.templates``; tracked by cd-duv6
    # (extended scope) — drops once the time repositories land.
    "app.domain.time.shifts -> app.adapters.db.time.models",
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` invokes
    # :func:`app.authz.enforce.require` for the ``time.clock_self``
    # / ``time.edit_others`` capability checks. ``app.authz``
    # transitively reads ORM models (see the sibling
    # ``app.domain.identity.role_grants -> app.authz.owners`` ignore
    # above); the intermediate edge is therefore whitelisted with the
    # same reasoning. Drops with cd-duv6.
    "app.domain.time.shifts -> app.authz",
]
unmatched_ignore_imports_alerting = "none"

[[tool.importlinter.contracts]]
name = "Domain forbids handlers (api/web/cli/worker)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.api", "app.web", "app.cli", "cli", "app.worker"]
ignore_imports = [
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` imports
    # :func:`app.authz.require`; ``app.authz.enforce`` pulls
    # :func:`app.api.deps.current_workspace_context` purely as a
    # FastAPI-dep seam for :func:`Permission`. The seam is on the
    # HTTP-router surface and is not referenced from the shift
    # service path, but the linter walks every transitive edge.
    # Whitelist the intermediate chain so the contract stays honest
    # without forcing the service to duplicate the enforcement body.
    # Drops when the enforcement body moves to a pure-domain seam
    # (or when app.authz.enforce stops reaching into app.api.deps).
    "app.domain.time.shifts -> app.authz",
    # v1 stopgap (cd-0rf): same reasoning as
    # ``app.domain.time.shifts -> app.authz`` — the one-off
    # service calls :func:`app.authz.enforce.require` for the
    # ``tasks.create`` defence-in-depth check, which transitively
    # pulls the FastAPI-dep seam. Drops with the same cleanup.
    "app.domain.tasks.oneoff -> app.authz",
]
unmatched_ignore_imports_alerting = "none"

[[tool.importlinter.contracts]]
name = "Adapters forbid handlers (api/web/cli/worker)"
type = "forbidden"
source_modules = ["app.adapters"]
forbidden_modules = ["app.api", "app.web", "app.cli", "cli", "app.worker"]
