[build-system]
# Hatchling gives us a PEP 517 backend with first-class support for
# the multi-package layout this repo needs: ``app/`` ships as the
# ``app`` distribution root and ``cli/crewday/`` is re-rooted as the
# top-level ``crewday`` package so ``[project.scripts] crewday =
# "crewday._main:main"`` resolves (see ``[tool.hatch.build.targets.wheel]``
# below). Chosen over ``setuptools`` because the ``sources`` remap is
# declarative rather than a ``package_dir`` / ``MANIFEST.in`` pairing.
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "crewday"
version = "0.0.1"
description = "crew.day — ops co-pilot for short-term-rental and small-hospitality teams."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2.6",
    "pydantic-settings",
    "python-multipart",
    "webauthn",
    "python-ulid",
    "apscheduler",
    "httpx",
    "icalendar",
    "python-dateutil",
    "itsdangerous",
    "weasyprint",
    "click",
    # argon2id hashing for API-token secrets (§03 "API tokens",
    # §15 "Token hashing"). The secret never leaves the server as
    # plaintext after mint; only its argon2id digest is stored, so a
    # DB leak cannot be replayed.
    "argon2-cffi>=23",
    # AES-256-GCM for the envelope-encryption seam (cd-1ai) — see
    # :mod:`app.adapters.storage.envelope` and
    # ``docs/specs/15-security-privacy.md`` §"Secret envelope". This
    # package is already pulled in transitively by ``webauthn``, but
    # pinning it directly makes the dependency explicit: the envelope
    # seam is a production invariant, not something a bump to
    # ``webauthn`` may quietly drop.
    "cryptography>=42",
    # Jinja2 for §10 email + push template rendering. The notification
    # service (cd-y1ge) loads ``<kind>.<channel>.j2`` files from
    # :mod:`app.domain.messaging.templates`; every email and push
    # payload is a rendered template. Pinning Jinja2 directly (not via
    # a transitive dep) makes the dependency explicit and survives a
    # future dev-tool shake-up that might drop Flask / locust.
    "jinja2>=3.1",
    # PyYAML for the CLI codegen pipeline (cd-1cfg). The exclusion
    # manifest :file:`cli/crewday/_exclusions.yaml` ships as YAML
    # (not TOML / JSON) because reviewers need to add entries with a
    # `reason:` comment block — YAML's `#` comments survive into the
    # diff while JSON strips them. PyYAML is already present as a
    # transitive of ``uvicorn[standard]`` + ``schemathesis`` but we
    # pin it directly so a future shake-up of those deps does not
    # silently break ``python -m crewday._codegen``.
    "pyyaml>=6.0",
]

# ``crewday`` is the sole console-script entry point. The target is
# :func:`crewday._main.main` — a ``@click.group`` wrapped by
# :func:`crewday._main.handle_errors`. See ``docs/specs/13-cli.md``
# §"Package layout" and Beads ``cd-j202``.
[project.scripts]
crewday = "crewday._main:main"

# Hatchling wheel layout. We ship two packages from this repo:
#   * ``app`` — the server distribution (FastAPI + domain + adapters).
#   * ``crewday`` — the CLI, which lives under ``cli/crewday/`` on
#     disk but is exposed at the top level of the wheel so the
#     ``[project.scripts] crewday`` entry resolves with a plain
#     ``import crewday._main``.
# ``sources`` remaps the on-disk path so ``cli/crewday/foo.py``
# becomes ``crewday/foo.py`` in the built wheel — no symlinks, no
# ``__init__.py`` redirects.
[tool.hatch.build.targets.wheel]
packages = ["app", "cli/crewday"]

[tool.hatch.build.targets.wheel.sources]
"cli/crewday" = "crewday"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "schemathesis",
    "playwright",
    "ruff",
    "mypy",
    "import-linter",
    "locust",
    "factory-boy",
    "hypothesis",
    # Postgres driver for the integration-test shard in CI. The sync
    # engine builds `postgresql+psycopg://` URLs (see
    # `app/adapters/db/session.py::normalise_sync_url`) so psycopg 3 must
    # be installed wherever integration tests target PG. SQLite shards
    # don't need it but installing in dev keeps parity with CI.
    "psycopg[binary]",
    # Spin up a real Postgres 15 per integration-test session (cd-rhaj).
    # The sqlite shard never touches this package, but it's cheap to
    # install in dev and keeps the PG shard hermetic: no need for a
    # services: postgres block in CI — testcontainers handles container
    # lifecycle from inside the test process.
    "testcontainers[postgres]",
    # Type stubs for :mod:`dateutil` used by
    # :mod:`app.domain.tasks.schedules` (RRULE parsing). Without the
    # stubs, ``mypy --strict`` flags ``from dateutil.rrule import
    # rrulestr`` as untyped; installing them keeps the strict gate
    # green without a blanket ``ignore_missing_imports``.
    "types-python-dateutil",
    # Type stubs for :mod:`yaml` used by the CLI codegen pipeline
    # (cd-1cfg). ``mypy --strict`` rejects ``import yaml`` as untyped
    # without them, and the codegen module is in scope for the strict
    # gate (``mypy cli/crewday/_codegen.py``).
    "types-PyYAML",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["mocks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
exclude = ["mocks/"]
# Map the on-disk ``cli/crewday/`` directory to the ``crewday``
# top-level package so ``mypy cli/`` resolves imports the same way
# the wheel layout does (see
# ``[tool.hatch.build.targets.wheel.sources]``). Without this,
# mypy would walk ``cli/crewday/_globals.py`` as the module
# ``cli.crewday._globals`` and then also find the installed copy as
# ``crewday._globals``, tripping its duplicate-module check.
mypy_path = "cli"

# APScheduler 3.x ships no ``py.typed`` marker and has no published
# stubs. The wrapper in :mod:`app.worker.scheduler` narrows the
# surface we depend on to ``AsyncIOScheduler`` + trigger classes;
# the ``ignore_missing_imports`` keeps ``mypy --strict`` quiet
# without masking type issues in our own code. Drops if APScheduler
# ships a typed release, or when we migrate to 4.x (which is
# typed).
[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Use importlib to prevent per-context dir name collisions
# (tests/unit/<ctx>/test_smoke.py appears under 13 contexts). The
# trade-off is that pytest no longer injects the project root into
# sys.path implicitly, so we set ``pythonpath`` to make ``app`` and
# ``tests._fakes``/``tests.factories`` importable.
addopts = "--import-mode=importlib"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "pg_only: test requires Postgres (skipped when CREWDAY_TEST_DB=sqlite)",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/__init__.py"]

# CSP inline linter (cd-wv2v).
#
# ``scripts/check_csp_inlines.py`` walks ``app/web/dist/**/*.html`` and
# refuses any ``<script>`` or ``<style>`` tag that is inline (no ``src=``
# / ``href=``) and not nonced. The strict CSP served by
# :class:`app.api.middleware.SecurityHeadersMiddleware` only accepts
# nonced inlines; an un-nonced one would silently be refused by the
# browser, breaking the SPA with no server-side error.
#
# Run locally:
#
#   uv run python scripts/check_csp_inlines.py
#   uv run python scripts/check_csp_inlines.py app/web/dist
#
# Wiring this into CI is deployment-infra scope (separate task); the
# script is ready to drop into any pipeline that already invokes the
# scripts/ directory. See docs/specs/15-security-privacy.md
# §"HTTP security headers".
[tool.check_csp]
default_path = "app/web/dist"

[tool.coverage.report]
show_missing = true
skip_covered = true

# Import boundary contracts (cd-ev0).
#
# Enforces the rules in docs/specs/01-architecture.md §"Boundary rules"
# and docs/specs/17-testing-quality.md §"Import boundaries":
#   1. `app.domain` must not import `app.adapters` (ports.py is the
#      one exception — it's the Protocol seam).
#   2. `app.domain` must not import handlers (`app.api`, `app.web`,
#      `app.cli`, `cli`) or `app.worker` (the scheduler/worker layer
#      drives the domain, not the other way around — §17 "Layer
#      contract").
#   3. `app.adapters` must not import handlers or `app.worker` either.
#
# A fourth contract in the spec — each `domain.<X>` may only reach
# siblings through the sibling's `__init__.py` public surface — is
# deferred until domain contexts grow submodules (today every
# `app/domain/<ctx>/__init__.py` is a docstring-only stub). Tracked
# as a follow-up Beads task.
#
# `include_external_packages = true` lets us name modules that don't
# yet exist as packages in the tree (e.g. `app.cli`, `cli`) without
# import-linter failing its build-graph step. `unmatched_ignore_imports_
# alerting = "none"` lets us describe the long-term allowlist now
# (e.g. `app.domain.** -> app.adapters.*.ports`) without tripping
# when no such imports exist yet.
[tool.importlinter]
# ``crewday`` joins ``app`` in the graph so the CLI-layer contract
# below (``"CLI forbids app server internals"``) has something to walk.
# Both packages are installed by the wheel remap in
# ``[tool.hatch.build.targets.wheel]``.
root_packages = ["app", "crewday"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain forbids adapters (except ports)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.adapters"]
ignore_imports = [
    "app.domain.** -> app.adapters.*.ports",
    "app.domain.** -> app.adapters.*.ports.*",
    # v1 stopgap (cd-zkr): ``app.domain.identity.permission_groups``
    # imports :class:`PermissionGroup` / :class:`PermissionGroupMember`
    # directly from ``app.adapters.db.authz.models`` instead of going
    # through a Protocol seam. Tracked for proper-seam refactor by
    # cd-duv6 — once ``PermissionGroupRepository`` lands under
    # ``app.adapters.db.authz.repositories`` this exception drops.
    "app.domain.identity.permission_groups -> app.adapters.db.authz.models",
    # v1 stopgap (cd-79r): ``app.domain.identity.role_grants`` reads
    # :class:`RoleGrant` / :class:`PermissionGroup` /
    # :class:`PermissionGroupMember` from ``app.adapters.db.authz.models``
    # and ``PropertyWorkspace`` from ``app.adapters.db.places.models``
    # directly. Same Protocol-seam refactor as permission_groups;
    # tracked by cd-duv6 (extended scope). Once the repositories
    # land these exceptions drop together.
    "app.domain.identity.role_grants -> app.adapters.db.authz.models",
    "app.domain.identity.role_grants -> app.adapters.db.places.models",
    # v1 stopgap (cd-mb5n): ``app.domain.identity._owner_guard`` is the
    # shared cross-dialect locking primitive for the last-owner
    # invariant; both ``remove_member`` and ``revoke`` delegate their
    # owner-count read to it. It imports :class:`PermissionGroup` /
    # :class:`PermissionGroupMember` from ``app.adapters.db.authz.models``
    # for the same reason as its siblings — the Protocol-seam refactor
    # hasn't landed yet. Drops with cd-duv6 alongside the other
    # ``app.domain.identity`` exceptions.
    "app.domain.identity._owner_guard -> app.adapters.db.authz.models",
    # v1 stopgap (cd-jpa): ``app.domain.identity.membership`` reads
    # identity + authz + workspace ORM models directly. Same
    # Protocol-seam refactor as the siblings above; tracked by
    # cd-duv6 (extended scope). Drops once the repositories land.
    "app.domain.identity.membership -> app.adapters.db.authz.models",
    "app.domain.identity.membership -> app.adapters.db.identity.models",
    "app.domain.identity.membership -> app.adapters.db.workspace.models",
    # The invite flow delegates token mint + consume to
    # :mod:`app.auth.magic_link`, which itself reads identity ORM
    # models directly (cd-4zz stopgap at the auth-layer level).
    # Shielding the transitive edge keeps the "domain can't touch
    # adapters" contract honest without forcing every auth domain
    # call to route through a port.
    "app.domain.identity.membership -> app.auth.magic_link",
    # v1 stopgap (cd-ckr): the owners-membership check lives under
    # ``app.authz.owners`` so the tenancy middleware (cd-7y4) and
    # the identity domain share one SELECT shape. ``app.authz``
    # itself is not ``app.domain`` so the contract would allow its
    # direct ``app.adapters`` import, but the transitive walk from
    # ``app.domain.identity.role_grants → app.authz.owners →
    # app.adapters.db.authz.models`` trips the checker. Ignoring the
    # intermediate edge keeps the DRY'd seam honest without
    # loosening the top-level "domain can't touch adapters" rule.
    # Drops with cd-duv6 when the proper repository protocol lands.
    "app.domain.identity.role_grants -> app.authz.owners",
    # ``app.audit`` is the canonical write seam for the audit log and
    # is intended to be called from every domain service (see
    # ``docs/specs/01-architecture.md`` §"Shared kernel" —
    # the audit writer sits above both domain and adapters). Its
    # implementation imports the ORM model class from
    # ``app.adapters.db.audit.models`` purely so ``write_audit`` can
    # construct a row; callers never see that dependency. Shielding
    # the transitive import keeps the contract honest without
    # forcing every domain caller to route through a third-party port.
    "app.audit -> app.adapters.db.audit.models",
    # v1 stopgap (cd-0tg): ``app.domain.tasks.templates`` reads
    # :class:`TaskTemplate` / :class:`Schedule` from
    # ``app.adapters.db.tasks.models`` directly. Same Protocol-seam
    # pattern as the identity stopgaps above; tracked by cd-duv6
    # (extended scope) — drops once the tasks repositories land.
    "app.domain.tasks.templates -> app.adapters.db.tasks.models",
    # v1 stopgap (cd-k4l): ``app.domain.tasks.schedules`` reads
    # :class:`Schedule` / :class:`Occurrence` / :class:`TaskTemplate`
    # from ``app.adapters.db.tasks.models`` directly. Same
    # Protocol-seam pattern as ``app.domain.tasks.templates``;
    # tracked by cd-duv6 (extended scope) — drops once the tasks
    # repositories land.
    "app.domain.tasks.schedules -> app.adapters.db.tasks.models",
    # v1 stopgap (cd-0rf): ``app.domain.tasks.oneoff`` reads
    # :class:`TaskTemplate` / :class:`Occurrence` from
    # ``app.adapters.db.tasks.models`` and :class:`Property` from
    # ``app.adapters.db.places.models`` (to resolve the property
    # timezone for the local → UTC projection). It also invokes
    # :func:`app.authz.enforce.require` for the ``tasks.create``
    # defence-in-depth check. Same Protocol-seam pattern as the
    # other tasks services above; tracked by cd-duv6 (extended
    # scope) — drops once the repositories land.
    "app.domain.tasks.oneoff -> app.adapters.db.tasks.models",
    "app.domain.tasks.oneoff -> app.adapters.db.places.models",
    "app.domain.tasks.oneoff -> app.authz",
    # v1 stopgap (cd-8u5): ``app.domain.places.property_service``
    # reads :class:`Property` and :class:`PropertyWorkspace` from
    # ``app.adapters.db.places.models`` directly. Same Protocol-
    # seam pattern as ``app.domain.tasks.templates``; tracked by
    # cd-duv6 (extended scope) — drops once the places repositories
    # land.
    "app.domain.places.property_service -> app.adapters.db.places.models",
    # v1 stopgap (cd-1ai): ``app.domain.stays.ical_service`` reads
    # :class:`IcalFeed` from ``app.adapters.db.stays.models`` directly.
    # Same Protocol-seam pattern as the places / tasks stopgaps above;
    # tracked by cd-duv6 (extended scope) — drops once the stays
    # repositories land.
    "app.domain.stays.ical_service -> app.adapters.db.stays.models",
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` reads
    # :class:`Shift` + ``_SHIFT_SOURCE_VALUES`` from
    # ``app.adapters.db.time.models`` directly. Same Protocol-seam
    # pattern as ``app.domain.tasks.templates``; tracked by cd-duv6
    # (extended scope) — drops once the time repositories land.
    "app.domain.time.shifts -> app.adapters.db.time.models",
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` invokes
    # :func:`app.authz.enforce.require` for the ``time.clock_self``
    # / ``time.edit_others`` capability checks. ``app.authz``
    # transitively reads ORM models (see the sibling
    # ``app.domain.identity.role_grants -> app.authz.owners`` ignore
    # above); the intermediate edge is therefore whitelisted with the
    # same reasoning. Drops with cd-duv6.
    "app.domain.time.shifts -> app.authz",
    # v1 stopgap (cd-y1ge): ``app.domain.messaging.notifications``
    # reads :class:`Notification`, :class:`PushToken`,
    # :class:`EmailOptOut` from ``app.adapters.db.messaging.models``
    # and :class:`User` from ``app.adapters.db.identity.models``
    # (to resolve the recipient's locale for template rendering).
    # Same Protocol-seam pattern as the other domain stopgaps;
    # tracked by cd-duv6 (extended scope) — drops once the messaging
    # repositories land.
    "app.domain.messaging.notifications -> app.adapters.db.messaging.models",
    "app.domain.messaging.notifications -> app.adapters.db.identity.models",
    # v1 stopgap (cd-k0qf): ``app.domain.llm.router`` reads
    # :class:`ModelAssignment` / :class:`LlmCapabilityInheritance`
    # from ``app.adapters.db.llm.models`` directly. Same Protocol-
    # seam pattern as the tasks / places / time stopgaps above;
    # tracked by cd-duv6 (extended scope) — drops once the LLM
    # repositories land.
    "app.domain.llm.router -> app.adapters.db.llm.models",
    # v1 stopgap (cd-irng): ``app.domain.llm.budget`` reads
    # :class:`BudgetLedger` / :class:`LlmUsage` from
    # ``app.adapters.db.llm.models`` directly — the rolling 30-day
    # envelope needs both to check the cached aggregate and to
    # write the post-flight usage row. Same Protocol-seam pattern
    # as the router above; tracked by cd-duv6 (extended scope) —
    # drops once the LLM repositories land.
    "app.domain.llm.budget -> app.adapters.db.llm.models",
    # v1 stopgap (cd-8luu): ``app.domain.tasks.assignment`` reads
    # :class:`Occurrence` / :class:`Schedule` from
    # ``app.adapters.db.tasks.models`` for the §06 "Assignment
    # algorithm" walk + default workload port. Same Protocol-seam
    # pattern as the other tasks services above; tracked by
    # cd-duv6 (extended scope) — drops once the tasks repositories
    # land.
    "app.domain.tasks.assignment -> app.adapters.db.tasks.models",
    # v1 stopgap (cd-7am7): ``app.domain.tasks.completion`` reads
    # :class:`Occurrence` / :class:`ChecklistItem` / :class:`Evidence`
    # from ``app.adapters.db.tasks.models`` and :class:`Movement`
    # from ``app.adapters.db.inventory.models`` for the state
    # machine + inventory-apply hook. Same Protocol-seam pattern
    # as the other tasks services; tracked by cd-duv6 — drops once
    # the tasks + inventory repositories land.
    "app.domain.tasks.completion -> app.adapters.db.tasks.models",
    "app.domain.tasks.completion -> app.adapters.db.inventory.models",
]
unmatched_ignore_imports_alerting = "none"

[[tool.importlinter.contracts]]
name = "Domain forbids handlers (api/web/cli/worker)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.api", "app.web", "app.cli", "cli", "app.worker"]
ignore_imports = [
    # v1 stopgap (cd-whl): ``app.domain.time.shifts`` imports
    # :func:`app.authz.require`; ``app.authz.enforce`` pulls
    # :func:`app.api.deps.current_workspace_context` purely as a
    # FastAPI-dep seam for :func:`Permission`. The seam is on the
    # HTTP-router surface and is not referenced from the shift
    # service path, but the linter walks every transitive edge.
    # Whitelist the intermediate chain so the contract stays honest
    # without forcing the service to duplicate the enforcement body.
    # Drops when the enforcement body moves to a pure-domain seam
    # (or when app.authz.enforce stops reaching into app.api.deps).
    "app.domain.time.shifts -> app.authz",
    # v1 stopgap (cd-0rf): same reasoning as
    # ``app.domain.time.shifts -> app.authz`` — the one-off
    # service calls :func:`app.authz.enforce.require` for the
    # ``tasks.create`` defence-in-depth check, which transitively
    # pulls the FastAPI-dep seam. Drops with the same cleanup.
    "app.domain.tasks.oneoff -> app.authz",
]
unmatched_ignore_imports_alerting = "none"

[[tool.importlinter.contracts]]
name = "Adapters forbid handlers (api/web/cli/worker)"
type = "forbidden"
source_modules = ["app.adapters"]
forbidden_modules = ["app.api", "app.web", "app.cli", "cli", "app.worker"]

# Spec `docs/specs/01-architecture.md` §"Boundary rules" rule 1 —
# each ``domain.<X>`` reaches siblings only through the sibling's
# public ``__init__.py`` surface, never by importing the sibling's
# submodules directly.
#
# ``independence`` actually enforces the *stricter* rule: no imports
# between the listed contexts in any direction, even through the
# public ``__init__.py``. That is deliberate — the v1 spec prefers
# events and cross-context refs (``UserRef`` / ``TaskRef``) over
# direct calls, and treating every ``app.domain.tasks ->
# app.domain.messaging`` edge as opt-in keeps cross-context
# coupling visible. When a legitimate public-surface import lands
# later (e.g. a re-exported service function from the sibling's
# ``__init__``), add it to ``ignore_imports`` below with a
# rationale — don't silently relax the contract.
#
# Contexts with no runtime submodules (assets, billing, expenses,
# instructions, inventory, payroll, stays) are intentionally left
# off — import-linter's ``modules`` list rejects entries without
# at least one importable child. They'll join the contract as soon
# as they grow real code; the selfreview gate on each new context
# reminds us to re-landscape this list.
[[tool.importlinter.contracts]]
name = "Domain contexts are independent (siblings via __init__ only)"
type = "independence"
modules = [
    "app.domain.identity",
    "app.domain.llm",
    "app.domain.messaging",
    "app.domain.places",
    "app.domain.tasks",
    "app.domain.time",
]
ignore_imports = [
    # v1 stopgap (cd-whl, cd-0rf): ``app.domain.time.shifts`` and
    # ``app.domain.tasks.oneoff`` both call :func:`app.authz.require`
    # for their defence-in-depth capability checks;
    # :mod:`app.authz.enforce` reads
    # ``app.domain.identity._action_catalog`` to resolve action →
    # required-grants. The transitive edge is a shared-kernel
    # capability lookup, not a sibling-context dependency — the
    # action catalog is data (a dict), not behaviour. Dropping this
    # whitelist would force every ``require`` caller to duplicate
    # the catalog inline. The clean fix is to promote the action
    # catalog to ``app.capabilities`` (the shared-kernel home per
    # spec §01); tracked by cd-duv6's broader seam cleanup.
    "app.authz.enforce -> app.domain.identity._action_catalog",
]
unmatched_ignore_imports_alerting = "none"

# The ``crewday`` CLI is a thin client over the HTTP surface; it must
# not reach into server-side business logic. ``app.util.ulid`` is the
# one shared-kernel exception today (used for :class:`CrewdayContext`'s
# idempotency-key factory so the CLI and server mint the same ULID
# shape). If another ``app.util.*`` module ever becomes legitimately
# cross-cutting, add it to ``ignore_imports`` here with a note —
# don't loosen ``forbidden_modules`` to ``app`` wholesale.
[[tool.importlinter.contracts]]
name = "CLI forbids app server internals"
type = "forbidden"
source_modules = ["crewday"]
forbidden_modules = [
    "app.api",
    "app.adapters",
    "app.domain",
    "app.worker",
    "app.web",
    "app.auth",
    "app.authz",
    "app.audit",
    "app.core",
]
ignore_imports = [
    # Shared-kernel ULID generator (see :mod:`crewday._globals`
    # ``default_idempotency_key_factory``). Not listed in
    # ``forbidden_modules`` above, but the name is recorded here so a
    # future reviewer grepping for ``app.util`` lands on this note.
    "crewday._globals -> app.util.ulid",
    # Build-time-only edge: :func:`crewday._codegen.load_live_schema`
    # boots the FastAPI app via :func:`app.api.factory.create_app` to
    # read ``app.openapi()``. The import is lazy (inside the function
    # body — see its docstring) and is only reached by the codegen
    # script that regenerates ``cli/crewday/_surface.json``; the CLI
    # runtime entrypoint never imports :mod:`crewday._codegen`. The
    # long-term fix is to teach the codegen to read the committed
    # ``docs/api/openapi.json`` instead of booting the app — tracked
    # by cd-uky5. Whitelisting only this root edge is sufficient:
    # import-linter's ``forbidden`` contract stops walking once the
    # edge it would flag is ignored, so transitive edges through
    # :mod:`app.api.factory` (routers, middleware, ``app.worker``)
    # don't need listing and won't rot as the factory evolves.
    "crewday._codegen -> app.api.factory",
]
unmatched_ignore_imports_alerting = "none"
